fix(admin): hide overflow for avatar in user admin-dashboard

--- a/src/admin/users/views/UserDetailPage.scss
+++ b/src/admin/users/views/UserDetailPage.scss
@@ -17,6 +17,10 @@
 		width: 10rem;
 		height: 10rem;
 
+		&.c-avatar--img {
+			overflow: hidden;
+		}
+
 		> img {
 			object-fit: contain;
 			width: auto;
